# device_comm_zmq

./: CMakeLists.txt  README.md  conanfile.py
cmake/: FindZMQ.cmake
config/: zmq
doc/utql/Network/: ZMQPullSink.xml  ZMQPullSource.xml  ZMQPushSink.xml  ZMQPushSource.xml  ZMQSink.xml  ZMQSource.xml
examples/: log4cpp.conf  zmq_receiver.dfg  zmq_receiver.srg  zmq_sender.dfg  zmq_sender.srg
src/: SConscript
src/utzmq/: CMakeLists.txt  SConscript  ZMQNetwork.cpp  ZMQNetwork.h  ZMQSink.cpp  ZMQSource.cpp  ZMQSource.h
